--- a/language/en-GB/en-GB.plg_content_google-analytics-event-tracking.ini
+++ b/language/en-GB/en-GB.plg_content_google-analytics-event-tracking.ini
@@ -1,4 +1,7 @@
-;@package    Alligo.PlgSystemAlligovarnish
+;@package    Alligo.PlgContentGoogleAnalyticsEventTracking
 ;@author     Emerson Rocha Luiz <emerson@alligo.com.br>
 ;@copyright  Copyright (C) 2015 Alligo Ltda. All rights reserved.
 ;@license    GNU General Public License version 3. See license.txt
+
+PLG_CONTENT_GOOGLE-ANALYTICS-EVENT-TRACKING="Content - Google Analytics Event Tracking from Alligo"
+PLG_CONTENT_GOOGLE-ANALYTICS-EVENT-TRACKING_XML_DESCRIPTION="Content - Google Analytics Event Tracking from Alligo"
