--- a/language/en-GB/en-GB.plg_content_google-analytics-event-tracking.sys.ini
+++ b/language/en-GB/en-GB.plg_content_google-analytics-event-tracking.sys.ini
@@ -1,19 +1,7 @@
-;@package    Alligo.PlgSystemAlligovarnish
+;@package    Alligo.PlgContentGoogleAnalyticsEventTracking
 ;@author     Emerson Rocha Luiz <emerson@alligo.com.br>
 ;@copyright  Copyright (C) 2015 Alligo Ltda. All rights reserved.
 ;@license    GNU General Public License version 3. See license.txt
 
-PLG_SYSTEM_ALLIGOVARNISH="System - Alligo Varnish Cache"
-PLG_SYSTEM_ALLIGOVARNISH_XML_DESCRIPTION="Alligo Varnish: Joomla CMS plugin that allow the CMS make a more agressive cache with Varnish Cache 4"
-PLG_SYSTEM_ALLIGOVARNISH_VARNISHTIME="Default Varnish Cache"
-PLG_SYSTEM_ALLIGOVARNISH_VARNISHTIME_DESC="Cache time for Varnish. Example: 1h = 60min = 3600s"
-PLG_SYSTEM_ALLIGOVARNISH_BROWSERTIME="Default Browser Cache"
-PLG_SYSTEM_ALLIGOVARNISH_BROWSERTIME_DESC="Cache time your visitor. Varnish can cache something for more time, but say for visitor cache for less or simple do not cache. Example: 1h = 60min = 3600s"
-PLG_SYSTEM_ALLIGOVARNISH_EXTPROXY="Varnish time exceptions"
-PLG_SYSTEM_ALLIGOVARNISH_EXTPROXY_DESC="Menu ID and times to cache, separed by ':', one per line. Units: s, m, h. Use 0 for no cache. Example: 101:120s(enter)102:2m(enter)103:3h"
-PLG_SYSTEM_ALLIGOVARNISH_BROWSER="Browser time exceptions"
-PLG_SYSTEM_ALLIGOVARNISH_BROWSER_DESC="Menu ID and times to cache, separed by ':', one per line. Units: s, m, h. Use 0 for no cache. Example: 101:120s(enter)102:2m(enter)103:3h"
-PLG_SYSTEM_ALLIGOVARNISH_EXTRAINFO="Extra headers"
-PLG_SYSTEM_ALLIGOVARNISH_EXTRAINFO_DESC="Informações extras, que podem ser usadas pelo Varnish Cache, em especial quando há conflito entre este plugin e outros do Joomla. Se Content-Cache é subistituida por terceiro, ativar essa opção habilita também X-Content-Cache."
-PLG_SYSTEM_ALLIGOVARNISH_DEBUG="Debug"
-PLG_SYSTEM_ALLIGOVARNISH_DEBUG_DESC="Debug mode. Add extra headers information"
+PLG_CONTENT_GOOGLE-ANALYTICS-EVENT-TRACKING="Content - Google Analytics Event Tracking from Alligo"
+PLG_CONTENT_GOOGLE-ANALYTICS-EVENT-TRACKING_XML_DESCRIPTION="Content - Google Analytics Event Tracking from Alligo"
